--- a/src/sections/services/Services.css
+++ b/src/sections/services/Services.css
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 600px) {
   .service-card {
-    margin-left: 125px;
+    margin-left: 60px;
     margin-top: 50px;
     height: 300px;
   }
