--- a/src/sections/testimonials/Testimonials.css
+++ b/src/sections/testimonials/Testimonials.css
@@ -25,7 +25,7 @@
 
 @media screen and (max-width: 600px) {
   .feedback-carousel {
-    margin-left: 110px;
+    margin-left: 45px;
 
   }
 
