--- a/src/sections/why/Why.css
+++ b/src/sections/why/Why.css
@@ -33,7 +33,7 @@
 
 @media screen and (max-width: 600px) {
   .why-card-right , .why-card-left{
-    margin-left: 150px;
+    margin-left: 90px;
   }
   .why-icon {
     font-size: 30px;
